--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-11-03 19:03:10 -0500 
+%% Created for Javier Concha First at 2015-11-15 16:31:19 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -37,15 +37,16 @@
 	Year = {1989}}
 
 @electronic{OceanOpticsBook,
+	Author = {Mobley, C.D.},
 	Date-Added = {2015-10-27 23:03:56 +0000},
-	Date-Modified = {2015-10-27 23:04:27 +0000},
+	Date-Modified = {2015-11-15 20:39:21 +0000},
 	Title = {Ocean Optics Web Book}}
 
 @book{GordonMorel1983,
-	Author = {Gordon, H.R., and A. Morel},
+	Author = {Gordon, H.R. and Morel, A.},
 	Date-Added = {2015-10-27 22:56:55 +0000},
-	Date-Modified = {2015-10-27 22:56:55 +0000},
-	Editor = {American Geophysical Union},
+	Date-Modified = {2015-11-15 20:41:07 +0000},
+	Organization = {American Geophysical Union},
 	Publisher = {Springer-Verlag, New York},
 	Series = {Lecture Notes on Coastal and Estuarine Studies Series},
 	Title = {Remote Assessment of Ocean Color for Interpretation of Satellite Visible Imagery: A Review},
@@ -305,14 +306,14 @@
 	Bdsk-Url-1 = {http://dx.doi.org/10.1029/98JC02160%7D}}
 
 @article{Gordon:1986fr,
-	Author = {H. R. Gordon},
+	Author = {Gordon, H. R.},
 	Date-Added = {2015-10-02 06:45:07 +0000},
-	Date-Modified = {2015-10-02 06:46:15 +0000},
+	Date-Modified = {2015-11-15 21:29:47 +0000},
 	Journal = {EOS Trans. Am. Geophys. Union},
 	Pages = {1055},
 	Title = {Ocean color remote sensing: influence of the particle phase function and the solar zenith angle},
 	Volume = {14},
-	Year = {1986􏰄}}
+	Year = {1986}}
 
 @article{Gordon:1988qv,
 	Author = {Gordon, H. R. and Brown, O. B. and Evans, R. H. and Brown, J. W. and Smith, R. C. and Baker, K. S. and Clark, D. K.},
@@ -473,8 +474,9 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.rse.2008.11.005}}
 
 @manual{SVCHR1024i,
+	Author = {SVC},
 	Date-Added = {2015-07-30 21:11:06 +0000},
-	Date-Modified = {2015-08-02 23:18:23 +0000},
+	Date-Modified = {2015-11-15 20:36:32 +0000},
 	Edition = {Rev. 1.5},
 	Organization = {Spectra Vista Corporation},
 	Title = {{SVC HR-1024i / SVC HR-768i User Manual}},
@@ -916,8 +918,9 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s12237-009-9141-4%7D}}
 
 @manual{NASA2010,
+	Author = {NASA},
 	Date-Added = {2014-02-02 03:57:04 +0000},
-	Date-Modified = {2014-02-02 04:03:56 +0000},
+	Date-Modified = {2015-11-15 20:35:44 +0000},
 	Organization = {NASA},
 	Title = {2010 Science Plan for NASA's Science Mission Directorate},
 	Year = {2010}}
@@ -994,8 +997,9 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Year = {{2012}}}
 
 @manual{NASA2011,
+	Author = {NASA},
 	Date-Added = {2014-01-29 15:49:14 +0000},
-	Date-Modified = {2014-02-02 04:03:45 +0000},
+	Date-Modified = {2015-11-15 20:36:15 +0000},
 	Organization = {NASA},
 	Title = {2011 NASA Strategic Plan},
 	Url = {http://www.nasa.gov/pdf/516579main_NASA2011StrategicPlan.pdf},
@@ -1560,9 +1564,9 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Title = {The Application of Fluorescence Spectroscopy in the Mercury Ion Detection},
 	Year = {2011}}
 
-@webpage{unknown,
+@webpage{UltraVisSpectro,
 	Date-Added = {2012-12-11 07:28:27 +0000},
-	Date-Modified = {2015-10-16 04:34:40 +0000},
+	Date-Modified = {2015-11-15 20:37:24 +0000},
 	Note = {\url{http://pharmaxchange.info/press/2012/04/ultraviolet-visible-uv-vis-spectroscopy-%E2%80%93-derivation-of-beer-lambert-law/}},
 	Title = {Ultraviolet-Visible (UV-Vis) Spectroscopy -- Derivation of Beer-Lambert Law},
 	Url = {http://pharmaxchange.info/press/2012/04/ultraviolet-visible-uv-vis-spectroscopy-%E2%80%93-derivation-of-beer-lambert-law/},
@@ -1638,11 +1642,13 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Monochromator}}
 
 @manual{UV2100,
+	Author = {Shimadzu Scientific Instrument, Inc.},
 	Date-Added = {2012-12-06 17:24:20 +0000},
-	Date-Modified = {2012-12-06 17:26:23 +0000},
+	Date-Modified = {2015-11-15 20:38:28 +0000},
 	Edition = {Rev. 3.0},
 	Organization = {Shimadzu Scientific Instrument, Inc.},
-	Title = {UV-2101/3101PC Instruction Manual}}
+	Title = {UV-2101/3101PC Instruction Manual},
+	Year = {1989}}
 
 @article{Mustard2001,
 	Author = {John F. Mustard and Matthew I. Staid and William J. Fripp},
