--- a/Methodology.tex
+++ b/Methodology.tex
@@ -57,7 +57,7 @@
 
 \tikzstyle{iosmall} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=1em, minimum height=1em, text width=1.0cm, text centered, draw=black, fill=blue!30]
 
-\tikzstyle{process} = [rectangle, minimum width=2em, minimum height=2em, text width=2.0cm, text centered, draw=black, fill=orange!30]
+\tikzstyle{process} = [rectangle, minimum width=3em, minimum height=2em, text width=2.5cm, text centered, draw=black, fill=orange!30]
 
 \tikzstyle{decision} = [diamond, minimum width=2em, minimum height=2em, text centered, draw=black, fill=green!30]
 
@@ -152,7 +152,7 @@ This chapter describes the methodology and approach taken to accomplish the spec
   \item To validate results by comparing with {\it in situ} measurements and products from ocean color satellites.
 \end{enumerate}
 
-\todo{Fix flowchart!}The processes described in this work were first introduced by \citet{Concha2013IGARSS} and are based on previous work done by \citet{Raqueno:2000}, \citet{Gerace:2012}, \citet{Pahlevan:2012b} and \citet{Gerace:2013}. A flowchart of the general processes involved is shown in \autoref{fig:highlevelflowchart}. The inputs are the Landsat 8 images and the final products are the maps of CPAs. The complete process can be divided into four different steps: image pre-processing, atmospheric correction, retrieval process, and validation. This chapter will be divided into these four processes. A more detailed flowchart is illustrated in \autoref{fig:detailflowchart} and a more pictorial diagram is shown in \autoref{fig:retrieval}\todo{change RMSE for RMSE/lsqnonlin}.
+The processes described in this work were first introduced by \citet{Concha2013IGARSS} and are based on previous work done by \citet{Raqueno:2000}, \citet{Gerace:2012}, \citet{Pahlevan:2012b} and \citet{Gerace:2013}. A flowchart of the general processes involved is shown in \autoref{fig:highlevelflowchart}. The inputs are the Landsat 8 images and the final products are the maps of CPAs. The complete process can be divided into four different steps: image pre-processing, atmospheric correction, retrieval process, and validation. This chapter will be divided into these four processes. A more detailed flowchart is illustrated in \autoref{fig:detailflowchart} and a more pictorial diagram is shown in \autoref{fig:retrieval}\todo{change RMSE for RMSE/lsqnonlin}.
 
 In short, the whole process works as follows. First, the \gls{dn} image from the satellite is radiometric calibrated, resized to include only the area of study, and masked for cloud and land. Then, the radiance image is atmospherically corrected and transformed to $R_{rs}$ spectra, as shown in \autoref{fig:detailflowchart}. At this point the $R_{rs}$ spectra of water pixels in the scene with unknown CPAs concentrations are compared with a LUT of $R_{rs}$ spectra with known CPAs concentrations. This comparison is made by using a spectrum-matching technique \citep{Raqueno:2000,Mobley:2005} that uses the \gls{rmse} and a non-linear optimization algorithm to find the closest match in the LUT. The end products are maps of CPA concentrations (see \autoref{fig:retrieval}). Finally, the CPA maps are validated by comparison with {\it in situ} data and standard bio-optical products. Each step in this retrieval process is described in more detail below.
 
